# amazon_hackon

./: CMakeLists.txt  Idea_submission.pptx  README.md  package.xml
config/: ros_control.yaml
include/: platform.h
launch/: gazebo.launch  ros_control.launch  spawn_robot.launch
models/aws_ground/: model.config  model.sdf
models/aws_ground/meshes/: aws_ground_collision.DAE  aws_ground_visual.DAE
models/floor/: model.config  model.sdf
models/pegasus/: model.config  model.sdf  pegasus.urdf
models/pegasus/meshes/: base_link.STL  inner_link.STL  symbol_link.STL
models/rack/: model.config  model.sdf  rack.urdf
models/small_box/: model.config
models/stair_climber/: CMakeLists.txt  model.config  model.sdf  package.xml  stair_climber.urdf
models/stair_climber/config/: joint_names_stair_climber.yaml
models/stair_climber/launch/: display.launch  gazebo.launch
models/stair_climber/meshes/: base_link.STL  belt.STL  front_left_small_wheel.STL  front_proximity.STL  front_right_large_wheel.STL  front_right_small_wheel.STL  imu.STL  kinect_rod.STL  large_wheel.STL  lifter.STL  lifter_base.STL  lifter_base_imu.STL  proximity.STL  rear_left_small_wheel.STL  rear_right_small_wheel.STL
models/stair_climber/urdf/: stair_climber.csv  stair_climber.urdf
models/stairs/: model.config  model.sdf  stairs.urdf  stairs_collision.urdf
models/stairs/meshes/: collision.STL  collision_1.STL
models/wall/: model.config  model.sdf
scripts/: find_centre.py  find_error.py
src/: platform.cpp
worlds/: demo.world  warehouse.world  warehouse_1.world
(+2 files in other folders)
